// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigates to forgot password form 1`] = `
<div
  className="App-root"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-double"
    >
      <h1
        className="Typography-root Typography-heading1 Typography-colorTextPrimary Typography-alignCenter"
      >
        Forgot Password
      </h1>
      <p
        className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
      >
        Enter your email address below and we will send you a link to
reset your password.
      </p>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Email Address
        </label>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          type="text"
          value=""
        />
      </div>
      <button
        className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="button"
      >
        Send Email
      </button>
    </div>
  </form>
</div>
`;

exports[`navigates to sign in form 1`] = `
<div
  className="App-root"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-double"
    >
      <h1
        className="Typography-root Typography-heading1 Typography-colorTextPrimary Typography-alignCenter"
      >
        Sign in to join the conversation
      </h1>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Email Address
        </label>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Password
        </label>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
        <div
          className="Flex-root Flex-flex Flex-justifyFlexEnd"
        >
          <button
            className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
            disabled={false}
            id="signIn-gotoForgotPasswordButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Forgot your password?
          </button>
        </div>
      </div>
      <button
        className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="submit"
      >
        Sign in to Join the Conversation
      </button>
      <div
        className="Flex-root Flex-flex Flex-justifyCenter"
      >
        <div
          className="Flex-root Typography-root Typography-bodyCopy Typography-colorTextPrimary Flex-flex"
        >
          <span>
            Don't have an account? 
          </span>
          <button
            className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
            disabled={false}
            id="signIn-gotoSignUpButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign Up
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`navigates to sign up form 1`] = `
<div
  className="App-root"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-double"
    >
      <h1
        className="Typography-root Typography-heading1 Typography-colorTextPrimary Typography-alignCenter"
      >
        Sign up to join the conversation
      </h1>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Email Address
        </label>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Username
        </label>
        <p
          className="Typography-root Typography-detail Typography-colorTextSecondary"
        >
          A unique identifier displayed on your comments. You may use “_” and “.”
        </p>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="username"
          onChange={[Function]}
          placeholder="Username"
          type="text"
          value=""
        />
      </div>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Password
        </label>
        <p
          className="Typography-root Typography-detail Typography-colorTextSecondary"
        >
          Must be at least ⁨8⁩ characters
        </p>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Confirm Password
        </label>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="confirmPassword"
          onChange={[Function]}
          placeholder="Confirm Password"
          type="password"
          value=""
        />
      </div>
      <button
        className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="submit"
      >
        Sign up and Join the Conversation
      </button>
      <div
        className="Flex-root Flex-flex Flex-justifyCenter"
      >
        <div
          className="Flex-root Typography-root Typography-bodyCopy Typography-colorTextPrimary Flex-flex"
        >
          <span>
            Already have an account? 
          </span>
          <button
            className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
            disabled={false}
            id="signUp-gotoSignInButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign In
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders sign in form 1`] = `
<div
  className="App-root"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-double"
    >
      <h1
        className="Typography-root Typography-heading1 Typography-colorTextPrimary Typography-alignCenter"
      >
        Sign in to join the conversation
      </h1>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Email Address
        </label>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="email"
          onChange={[Function]}
          placeholder="Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="HorizontalGutter-root FormField-root HorizontalGutter-half"
      >
        <label
          className="Typography-root Typography-inputLabel Typography-colorTextPrimary InputLabel-root"
        >
          Password
        </label>
        <input
          className="TextField-root TextField-colorRegular TextField-fullWidth"
          disabled={false}
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
        <div
          className="Flex-root Flex-flex Flex-justifyFlexEnd"
        >
          <button
            className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
            disabled={false}
            id="signIn-gotoForgotPasswordButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Forgot your password?
          </button>
        </div>
      </div>
      <button
        className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="submit"
      >
        Sign in to Join the Conversation
      </button>
      <div
        className="Flex-root Flex-flex Flex-justifyCenter"
      >
        <div
          className="Flex-root Typography-root Typography-bodyCopy Typography-colorTextPrimary Flex-flex"
        >
          <span>
            Don't have an account? 
          </span>
          <button
            className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
            disabled={false}
            id="signIn-gotoSignUpButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign Up
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
